--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,7 @@
 [theme]
-primaryColor = "darkcyan"
-textColor = "darkslategray"
-font = "sans serif"
+base="dark"
 
-[theme.sidebar]
-backgroundColor="ghostWhite"
-secondaryBackgroundColor="lightcyan"
+primaryColor="#FF8C00"
+backgroundColor="#0A0F14"
+secondaryBackgroundColor="#11161C"
+textColor="#E6E6E6"
