Horizontal bar chart

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 base="dark"
 
-primaryColor="#FF8C00"
+primaryColor="#69BDBA"
 backgroundColor="#0A0F14"
 secondaryBackgroundColor="#11161C"
 textColor="#E6E6E6"
